GloablServices/keshavglobal/force-app/main/default/objects/AccountContactConfiguration__c/AccountContactConfiguration__c.object-meta.xml
<CustomObject>
    <label>Account Contact Configuration</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Contact Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>