GloablServices/keshavglobal/force-app/main/default/objects/AccountContactConfiguration__c/fields/Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Agency_Name__c</fullName>
    <formula>IF(ISBLANK(Contact__r.Agency_Name__c), &apos;N/A&apos;, Contact__r.Agency_Name__c)</formula>
    <label>Agency Name</label>
    <type>Text</type>
</CustomField>