GloablServices/keshavglobal/force-app/main/default/objects/AccountContactConfiguration__c/fields/Auto_Offer__c.field-meta.xml
<CustomField>
    <fullName>Auto_Offer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Offer</label>
    <type>Checkbox</type>
</CustomField>