GloablServices/keshavglobal/force-app/main/default/objects/AccountContactConfiguration__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Account Contact Configuration</relationshipLabel>
    <relationshipName>AccountContactConfuguration</relationshipName>
    <type>Lookup</type>
</CustomField>