GloablServices/keshavglobal/force-app/main/default/objects/AccountContactConfiguration__c/fields/Employee_Account__c.field-meta.xml
<CustomField>
    <fullName>Employee_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Employees</relationshipLabel>
    <relationshipName>EmployeeAccountConfiguration</relationshipName>
    <type>Lookup</type>
</CustomField>