GloablServices/keshavglobal/force-app/main/default/objects/AccountContactConfiguration__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <formula>Nurse_Account__r.Parent.Name</formula>
    <label>Group</label>
    <type>Text</type>
</CustomField>