GloablServices/keshavglobal/force-app/main/default/objects/AccountContactConfiguration__c/fields/Nurse_Account__c.field-meta.xml
<CustomField>
    <fullName>Nurse_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nurse Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Excluded Nurses</relationshipLabel>
    <relationshipName>NurseAccountConfuguration</relationshipName>
    <type>Lookup</type>
</CustomField>