GloablServices/keshavglobal/force-app/main/default/objects/AccountContactConfiguration__c/fields/Nurse_Type__c.field-meta.xml
<CustomField>
    <fullName>Nurse_Type__c</fullName>
    <formula>Text(Contact__r.Nurse_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nurse Type</label>
    <type>Text</type>
</CustomField>