GloablServices/keshavglobal/force-app/main/default/objects/AccountContactConfiguration__c/recordTypes/Employee_Customer.recordType-meta.xml
<RecordType>
    <fullName>Employee_Customer</fullName>
    <active>true</active>
    <label>Employee Customer</label>
</RecordType>