GloablServices/keshavglobal/force-app/main/default/objects/AccountContactConfiguration__c/recordTypes/Nurse_Customer.recordType-meta.xml
<RecordType>
    <fullName>Nurse_Customer</fullName>
    <active>true</active>
    <label>Nurse Customer</label>
</RecordType>