GloablServices/keshavglobal/force-app/main/default/objects/AccountContactConfiguration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Agency_Name__c</columns>
    <columns>Employee_Account__c</columns>
    <columns>Nurse_Account__c</columns>
    <columns>First_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>